# mf-vehicle-rebalancing

./: LICENSE  README.md  requirements.txt  setup.cfg
checkpoints/trc_0wg-d-od_18s_18k-v_14k-r_0u_mfc_1ot_0pct_run1_20240326/checkpoints/policy/: policy_final.pt
checkpoints/trc_0wg-d-od_18s_18k-v_14k-r_0u_mfc_1ot_50pct_run1_20250207/checkpoints/policy/: policy_final.pt
checkpoints/trc_0wg-d-od_18s_18k-v_14k-r_0u_mfc_1ot_85pct_run1_20250207/checkpoints/policy/: policy_final.pt
checkpoints/trc_0wg-d-od_18s_18k-v_14k-r_0u_mfrl_gms_cla_0pct_run1_20240326/checkpoints/policy/: policy_final.pt
configs/evaluation/: trc_0wg-d-od_18s_18k-v_14k-r_0u_dummy.yaml  trc_0wg-d-od_18s_18k-v_14k-r_0u_lp-real-time.yaml  trc_0wg-d-od_18s_18k-v_14k-r_0u_lp-static.yaml  trc_0wg-d-od_18s_18k-v_14k-r_0u_mfc_1ot_50pct.yaml  trc_0wg-d-od_18s_18k-v_14k-r_0u_mfrl_gms_cla_50pct.yaml
configs/training/: trc_0wg-d-od_18s_18k-v_14k-r_0u_mfc_1ot_50pct_run1.yaml  trc_0wg-d-od_18s_18k-v_14k-r_0u_mfrl_gms_cla_50pct_run1.yaml
safe_mf/: main.py
safe_mf/alg/: safe_mf_marl.py
safe_mf/envs/: env.py  vehicle_repositioning_simultaneous.py
safe_mf/models/: bechmarks.py  gradient_descent.py  lp_rebalancers.py  matching_models.py  matching_simulators.py  policy.py  statistical_model.py
safe_mf/utils/: data.py  distributions.py  entropy.py  reward.py  transition.py  utils.py
