[metadata]
name = mf-vehicle-rebalancing
version = 0.0.1
author = Matej Jusup
author_email = matej.jusup@gmail.com
license = BSD-3-Clause

[options]
install_requires =
    numpy>=1.25.2
    pyyaml>=6.0.1
    torch>=2.3.1
    torch_geometric>=2.5.3
    torchist>=0.2.3
    tqdm>=4.66.4
    wandb>=0.17.2
python_requires = >=3.11
packages = find: